[gd_scene load_steps=40 format=3 uid="uid://ddiggba3yluki"]

[ext_resource type="Script" path="res://Script/goblin.gd" id="1_etswc"]
[ext_resource type="Texture2D" uid="uid://pphw5hxm8kwq" path="res://Assets/Mobs/Goblin/Death.png" id="1_frhfy"]
[ext_resource type="Texture2D" uid="uid://btj4uxpwyc045" path="res://Assets/Mobs/Goblin/Attack.png" id="2_6jjsd"]
[ext_resource type="Texture2D" uid="uid://cp2hxxgq6xim8" path="res://Assets/Mobs/Goblin/Run.png" id="2_o33l3"]
[ext_resource type="Texture2D" uid="uid://cfu10l5k1gtda" path="res://Assets/Mobs/Goblin/Idle.png" id="3_kouhl"]
[ext_resource type="PackedScene" uid="uid://bur1gparjfvvi" path="res://Scene/damage_box.tscn" id="6_gg6mi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hehd2"]
height = 38.0

[sub_resource type="AtlasTexture" id="AtlasTexture_jbxfm"]
atlas = ExtResource("2_6jjsd")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv4gu"]
atlas = ExtResource("2_6jjsd")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl15i"]
atlas = ExtResource("2_6jjsd")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhmmw"]
atlas = ExtResource("2_6jjsd")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vecdb"]
atlas = ExtResource("2_6jjsd")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tklvh"]
atlas = ExtResource("2_6jjsd")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs5y0"]
atlas = ExtResource("2_6jjsd")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k21v"]
atlas = ExtResource("2_6jjsd")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2cy8"]
atlas = ExtResource("1_frhfy")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv2jb"]
atlas = ExtResource("1_frhfy")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l8jn"]
atlas = ExtResource("1_frhfy")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_041bk"]
atlas = ExtResource("1_frhfy")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsgbn"]
atlas = ExtResource("2_o33l3")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfyql"]
atlas = ExtResource("2_o33l3")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2smpr"]
atlas = ExtResource("2_o33l3")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwfiw"]
atlas = ExtResource("2_o33l3")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vqyg"]
atlas = ExtResource("2_o33l3")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s0pp"]
atlas = ExtResource("2_o33l3")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnd6l"]
atlas = ExtResource("2_o33l3")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_83wep"]
atlas = ExtResource("2_o33l3")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj50x"]
atlas = ExtResource("3_kouhl")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvx7v"]
atlas = ExtResource("3_kouhl")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1aubr"]
atlas = ExtResource("3_kouhl")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jssch"]
atlas = ExtResource("3_kouhl")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_a7xxr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbxfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv4gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl15i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhmmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vecdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tklvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs5y0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k21v")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2cy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv2jb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l8jn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_041bk")
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsgbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfyql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2smpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwfiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vqyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s0pp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnd6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83wep")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj50x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvx7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1aubr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jssch")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_jo4gv"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}

[sub_resource type="Animation" id="Animation_jnk6x"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}

[sub_resource type="Animation" id="Animation_wvlrd"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="Animation" id="Animation_6wlr1"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_katrm"]
_data = {
"Attack": SubResource("Animation_jo4gv"),
"Death": SubResource("Animation_jnk6x"),
"Run": SubResource("Animation_wvlrd"),
"idle": SubResource("Animation_6wlr1")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7bj3v"]
radius = 127.004

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66xrg"]
size = Vector2(76.5, 37.5)

[node name="Goblin" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_etswc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_hehd2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, -10)
sprite_frames = SubResource("SpriteFrames_a7xxr")
animation = &"Attack"
autoplay = "idle"
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_katrm")
}
autoplay = "idle"

[node name="Detector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_7bj3v")

[node name="AttackDirection" type="Node2D" parent="."]
visible = false

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
shape = SubResource("RectangleShape2D_66xrg")

[node name="DamageBox" parent="." instance=ExtResource("6_gg6mi")]

[node name="HurtBox" parent="DamageBox" index="0"]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" parent="DamageBox/HurtBox" index="0"]
position = Vector2(-10, -5)

[node name="HitBox" parent="DamageBox" index="1"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="DamageBox/HitBox" index="0"]
position = Vector2(16, -2)

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]

[editable path="DamageBox"]
